# parfam

./: Explore datasets.ipynb  Exploring the results.ipynb  Optimizing_code.ipynb  Process the results.ipynb  README.md  benchmark.py  datasets_with_notes  environment.yml  example.ipynb  explore_results_hillary.ipynb  license  parfam_torch.py  parfamwarpper.py  parfamwrapper.py  playground.py  pyproject.toml  requirements.txt  run_testing_classifier.sh  train.py  train_classifier.sh  utils.py
config_files/: debug.ini  feynman.ini
config_files/wrapper/: big.ini
results/: results_parfam.csv
results/20231009_183155_debug/: debug.ini
results/20240308_151252_debug/: results.csv  summary_data.csv  (+1 more)
trainingOnSyntheticData/: 20230809_125708_results_iter_1000.csv  20230809_125708_results_iter_1000.txt  20230809_142011_results_iter_1000.csv  20230809_142011_results_iter_1000.txt  20230809_163746_results_iter_100.csv  20230809_163746_results_iter_100.txt  20230809_171749_results_iter_500.csv  20230809_171749_results_iter_500.txt  20230809_172056_results_iter_100.csv  20230810_095849_results_iter_500.csv  20230810_115227_results_iter_5000.csv  20230810_161526_results_iter_5000.csv  20230811_144228_results_iter_100.csv  20230811_152333_results_iter_50.csv  20230811_155210_results_iter_50.csv  20230811_162935_results_iter_50.csv  20230811_170837_results_iter_1000.csv  20230812_000614_results_iter_500.csv  20230813_115038_results_iter_2000.csv  Classification.ipynb  Explore results.ipynb  Regression.ipynb  Test basinhopping.ipynb  test_classifier.py  test_dlparfam.py  train.py
(+217 files in other folders)
